src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>HYPERLINK(State__r.Country__c , State__r.Country__r.Name ,&quot;_self&quot;) + &quot;=&gt;&quot;+ HYPERLINK(State__c, State__r.Name, &quot;__self&quot;)  +&quot;=&gt;&quot;+Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>Pin Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pin_Code__c</columns>
        <columns>State__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>